@@ -27,6 +27,7 @@
       <property name="visible">True</property>
       <property name="homogeneous">False</property>
       <property name="spacing">0</property>
+      <property name="orientation">vertical</property>
 
       <child>
 	<widget class="GtkMenuBar" id="menubar1">
@@ -49,6 +50,29 @@
 		      <property name="label">gtk-open</property>
 		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="OnOpen" last_modification_time="Thu, 29 May 2003 13:54:37 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="separatormenuitem1">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="closetab1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">_Close Tab</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="OnCloseTab" />
+		      <accelerator key="w" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image1">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-close</property>
+			  <property name="icon-size">1</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
@@ -101,27 +125,35 @@
       </child>
 
       <child>
-	<placeholder/>
-      </child>
-
-      <child>
-	<widget class="GtkScrolledWindow" id="scrolledwindow1">
+	<widget class="GtkVPaned" id="vpaned1">
 	  <property name="visible">True</property>
-	  <property name="can_focus">True</property>
-	  <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-	  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-	  <property name="shadow_type">GTK_SHADOW_NONE</property>
-	  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 	  <child>
-	    <placeholder/>
+	    <widget class="GtkScrolledWindow" id="scrolledwindow1">
+	      <property name="visible">True</property>
+	      <property name="can_focus">True</property>
+	      <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+	      <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+	      <property name="shadow_type">GTK_SHADOW_NONE</property>
+	      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
+	      <child>
+		<placeholder/>
+	      </child>
+	    </widget>
+	    <packing>
+	      <property name="padding">2</property>
+	      <property name="expand">True</property>
+	      <property name="fill">True</property>
+	    </packing>
+          </child>
+
+	  <child>
+	    <widget class="GtkNotebook" id="notebook1">
+	      <property name="visible">True</property>
+	    </widget>
 	  </child>
+
 	</widget>
-	<packing>
-	  <property name="padding">2</property>
-	  <property name="expand">True</property>
-	  <property name="fill">True</property>
-	</packing>
       </child>
 
       <child>
